apps/staging/ollama/service-jetson.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-jetson
  namespace: ollama
spec:
  ports:
    - port: 11434
      targetPort: 11434
      protocol: TCP
  selector:
    app: ollama-jetson
  type: ClusterIP
